--- a/3/index.html
+++ b/3/index.html
@@ -80,7 +80,7 @@
 	  </div>
 	  <div id="comic">
 	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
-	       href="3/comic.png">
+	       href="https://indiangeogra.github.io/3/comic.png">
 	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
 		 width="100%"
 		 data-src="https://indiangeogra.github.io/3/comic_small.png"
