--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	  </div>
 	  <div id="comic">
 	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
-	       href="4/comic.png">
+	       href="https://indiangeogra.github.io/4/comic.png">
 	    <img src="https://indiangeogra.github.io/4/comic_lazy.png"
 		 width="100%"
 		 data-src="https://indiangeogra.github.io/4/comic_small.png"
