--- a/1/index.html
+++ b/1/index.html
@@ -20,7 +20,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Счастливого Нового года</title>
+    <title>indian geogra: Новый год</title>
     <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,7 +61,7 @@
 
 
           <div id="ComicTitle">
-	    Счастливого Нового года!
+	    Новый год
 	  </div>
 
           <div id="nav" style="padding: 12px 8px 12px 8px;">
@@ -78,7 +78,7 @@
 		 width="100%"
 		 data-src="https://indiangeogra.github.io/1/comic_small.png"
 		 class="lazyload blur-up"
-		 title="Славься, славься, ты Новый год." alt="Счастливого Нового года"
+		 title="070116" alt="Новый год"
 		 class="lazyload no-src" />
 	    </a>
 	  </div>
