--- a/3/index.html
+++ b/3/index.html
@@ -59,7 +59,7 @@
           	indian geogra
           	</span>
           </h1>
-          <h2>Фантазия для очевидца с оркестром</h2>
+          <h2>С неба про погоду</h2>
         </header>
 
 
@@ -85,7 +85,7 @@
 		 width="100%"
 		 data-src="https://indiangeogra.github.io/3/comic_small.png"
 		 class="lazyload blur-up"
-		 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
+		 title="290116" alt="Ходячий замок Хаула" class="lazyload no-src" />
 	    </a>
 	  </div>
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
