--- a/4/index.html
+++ b/4/index.html
@@ -60,7 +60,7 @@
           	indian geogra
           	</span>
           </h1>
-          <h2>Фантазия для очевидца с оркестром</h2>
+          <h2>С неба про погоду</h2>
         </header>
 
 
