--- a/1/index.html
+++ b/1/index.html
@@ -20,7 +20,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Новый год</title>
+    <title>indian geogra: Daria 2016</title>
     <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -54,14 +54,14 @@
           	indian geogra
           	</span>
           </h1>
-          <h2>Фантазия для очевидца с оркестром</h2>
+          <h2>С неба про погоду</h2>
         </header>
 
         <section id="main_content">
 
 
           <div id="ComicTitle">
-	    Новый год
+	    Daria 2016
 	  </div>
 
           <div id="nav" style="padding: 12px 8px 12px 8px;">
