--- a/2/index.html
+++ b/2/index.html
@@ -56,7 +56,7 @@
           	indian geogra
           	</span>
           </h1>
-          <h2>Фантазия для очевидца с оркестром</h2>
+          <h2>С неба про погоду</h2>
         </header>
 
         <section id="main_content">
@@ -86,7 +86,7 @@
 		 width="100%"
 		 data-src="https://indiangeogra.github.io/2/comic_small.png"
 		 class="lazyload blur-up"
-		 title="Всего каких-нибудь пять месяцев..." alt="Окололетнее" 
+		 title="120216" alt="Окололетнее" 
 		 class="lazyload no-src" />
 	    </a>
 	  </div>
