--- a/archive.html
+++ b/archive.html
@@ -56,7 +56,7 @@
           	indian geogra
           	</span>
           </h1>-->
-          <h2>Фантазия для очевидца с оркестром</h2>
+          <h2>С неба про погоду</h2>
         </header>
 
         <section id="main_content">
@@ -66,11 +66,11 @@
 	  </div>
 
 	  <a style="display: inline; padding: 0px 0px 0px 0px;"  
-	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года"
+	     href="1/comic.png" data-lightbox="comic" data-title="Daria 2016"
 	     rel="lightbox[comic]">
 	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
 			 width="140px;"
-			 title="Счастливого Нового года" alt="Счастливого Нового года" />
+			 title="Daria 2016" alt="Daria 2016" />
 	  </a>
 
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
@@ -98,6 +98,15 @@
 	    	    <img src="https://indiangeogra.github.io/4/comic_lazy.png"
 			 width="140px;"
 			 title="А." alt="А." />
+	  </a>
+          <!-- Kонец новой ссылки -->
+ <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="5/comic.png" data-lightbox="comic" data-title="Случай в Мадриде"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/5/comic_lazy.png"
+			 width="140px;"
+			 title="Случай в Мадриде" alt="Случай в Мадриде" />
 	  </a>
           <!-- Kонец новой ссылки -->
 
