--- a/5/index.html
+++ b/5/index.html
@@ -83,7 +83,7 @@
 	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
 	       href="https://indiangeogra.github.io/5/comic.png">
 	    <img src="https://indiangeogra.github.io/5/comic_lazy.png"
-		 width="100%"
+		 <!--width="100%"-->
 		 data-src="https://indiangeogra.github.io/5/comic_small.png"
 		 class="lazyload blur-up"
 		 title="180216" alt="Случай в Мадриде" class="lazyload no-src" />
