--- a/5/index.html
+++ b/5/index.html
@@ -80,6 +80,7 @@
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
+	  <center>
 	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
 	       href="https://indiangeogra.github.io/5/comic.png">
 	    <img src="https://indiangeogra.github.io/5/comic_lazy.png"
@@ -88,6 +89,7 @@
 		 class="lazyload blur-up"
 		 title="180216" alt="Случай в Мадриде" class="lazyload no-src" />
 	    </a>
+	  </center>
 	  </div>
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
