--- a/5/index.html
+++ b/5/index.html
@@ -81,7 +81,7 @@
 	  </div>
 	  <div id="comic">
 	  <center>
-	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
+	    <a style="display: inline; color: #303030; padding: 0px 0px 0px 0px;"
 	       href="https://indiangeogra.github.io/5/comic.png">
 	    <img src="https://indiangeogra.github.io/5/comic_lazy.png"
 		 <!--width="100%"-->
