--- a/archive.html
+++ b/archive.html
@@ -110,6 +110,15 @@
 	  </a>
           <!-- Kонец новой ссылки -->
 
+<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="6/comic.png" data-lightbox="comic" data-title="По дороге"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/6/comic_lazy.png"
+			 width="140px;"
+			 title="По дороге" alt="По дороге" />
+	  </a>
+          <!-- Kонец новой ссылки -->
 
 	  <hr>
 
