--- a/6/index.html
+++ b/6/index.html
@@ -33,7 +33,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Случай в Мадриде</title>
+    <title>indian geogra: По дороге</title>
     
     <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -68,13 +68,13 @@
 
 
           <div id="ComicTitle">
-	    Случай в Мадриде
+	    По дороге
 	  </div>
 
 
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../4/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../5/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../6/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
@@ -87,7 +87,7 @@
 		 width="100%"
 		 data-src="https://indiangeogra.github.io/5/comic_small.png"
 		 class="lazyload blur-up"
-		 title="180216" alt="Случай в Мадриде" class="lazyload no-src" />
+		 title="180216" alt="По дороге" class="lazyload no-src" />
 	    </a>
 	  </center>
 	  </div>
