--- a/archive.html
+++ b/archive.html
@@ -119,6 +119,15 @@
 			 title="По дороге" alt="По дороге" />
 	  </a>
           <!-- Kонец новой ссылки -->
+		  <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="7/comic.png" data-lightbox="comic" data-title="Ведьма"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/7/comic_lazy.png"
+			 width="140px;"
+			 title="Ведьма" alt="Ведьма" />
+	  </a>
+          <!-- Kонец новой ссылки -->
 
 	  <hr>
 
