--- a/7/index.html
+++ b/7/index.html
@@ -84,7 +84,7 @@
 	    <a style="display: inline; color: #303030; padding: 0px 0px 0px 0px;"
 	       href="https://indiangeogra.github.io/7/comic.png">
 	    <img src="https://indiangeogra.github.io/7/comic_lazy.png"
-		 width="100%"
+		 <!--width="100%"-->
 		 data-src="https://indiangeogra.github.io/7/comic_small.png"
 		 class="lazyload blur-up"
 		 title="170815" alt="Ведьма" class="lazyload no-src" />
