--- a/archive.html
+++ b/archive.html
@@ -128,6 +128,15 @@
 			 title="Ведьма" alt="Ведьма" />
 	  </a>
           <!-- Kонец новой ссылки -->
+		  	  <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="8/comic.png" data-lightbox="comic" data-title="Фонари зажигаются"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/8/comic_lazy.png"
+			 width="140px;"
+			 title="Фонари зажигаются" alt="Фонари зажигаются" />
+	  </a>
+          <!-- Kонец новой ссылки -->
 
 	  <hr>
 
