--- a/8/index.html
+++ b/8/index.html
@@ -84,7 +84,7 @@
 	    <a style="display: inline; color: #303030; padding: 0px 0px 0px 0px;"
 	       href="https://indiangeogra.github.io/8/comic.png">
 	    <img src="https://indiangeogra.github.io/8/comic_lazy.png"
-		 <!--width="100%"-->
+		 width="432px"
 		 data-src="https://indiangeogra.github.io/8/comic_small.png"
 		 class="lazyload blur-up"
 		 title="130815" alt="Фонари зажигаются" class="lazyload no-src" />
