--- a/3/index.html
+++ b/3/index.html
@@ -79,14 +79,16 @@
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
+	    <center>
+	    <a style="display:inline; color: #303030; padding: 0px 0px 0px 0px;"
 	       href="https://indiangeogra.github.io/3/comic.png">
 	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
-		 width="100%"
+		 width="496px"
 		 data-src="https://indiangeogra.github.io/3/comic_small.png"
 		 class="lazyload blur-up"
 		 title="290116" alt="Ходячий замок Хаула" class="lazyload no-src" />
 	    </a>
+	    </center>
 	  </div>
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
