--- a/archive.html
+++ b/archive.html
@@ -137,6 +137,15 @@
 			 title="Фонари зажигаются" alt="Фонари зажигаются" />
 	  </a>
           <!-- Kонец новой ссылки -->
+		  <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="9/comic.png" data-lightbox="comic" data-title="Март"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/9/comic_lazy.png"
+			 width="140px;"
+			 title="Март" alt="Март" />
+	  </a>
+          <!-- Kонец новой ссылки -->
 
 	  <hr>
 
