--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Март</title>
+    <title>indian geogra: Фонари зажигаются</title>
     
     <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -68,13 +68,13 @@
 
 
           <div id="ComicTitle">
-	    Март
+	    Фонари зажигаются
 	  </div>
 
 
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../8/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../7/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../9/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
@@ -82,19 +82,12 @@
 	  <div id="comic">
 	  <center>
 	    <a style="display: inline; color: #303030; padding: 0px 0px 0px 0px;"
-<<<<<<< HEAD
-	       href="https://indiangeogra.github.io/9/comic.png">
-	    <img src="https://indiangeogra.github.io/9/comic_lazy.png"
-		 <!--width="100%"-->
-		 data-src="https://indiangeogra.github.io/9/comic_small.png"
-=======
 	       href="https://indiangeogra.github.io/8/comic.png">
 	    <img src="https://indiangeogra.github.io/8/comic_lazy.png"
 		 width="432px"
 		 data-src="https://indiangeogra.github.io/8/comic_small.png"
->>>>>>> origin/master
 		 class="lazyload blur-up"
-		 title="010315" alt="Март" class="lazyload no-src" />
+		 title="130815" alt="Фонари зажигаются" class="lazyload no-src" />
 	    </a>
 	  </center>
 	  </div>
@@ -102,7 +95,7 @@
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../8/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../9/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../8/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <br />
@@ -120,8 +113,8 @@
 	  <br />
 	  <center>
 	  <div style="color: #333">
-	  Сослать в наш красный уголок: http://indiangeogra.github.io/9/index.html<br />
-	  Стянуть картинку: http://indiangeogra.github.io/9/comic.png
+	  Сослать в наш красный уголок: http://indiangeogra.github.io/8/index.html<br />
+	  Стянуть картинку: http://indiangeogra.github.io/8/comic.png
 	  </div>
 	  </center>
         
