--- a/archive.html
+++ b/archive.html
@@ -146,6 +146,16 @@
 			 title="Март" alt="Март" />
 	  </a>
           <!-- Kонец новой ссылки -->
+		  <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="10/comic.png" data-lightbox="comic" data-title="Часы"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/10/comic_lazy.png"
+			 width="140px;"
+			 title="Часы" alt="Часы" />
+	  </a>
+          <!-- Kонец новой ссылки -->
+
 
 	  <hr>
 
