--- a/archive.html
+++ b/archive.html
@@ -155,6 +155,15 @@
 			 title="Часы" alt="Часы" />
 	  </a>
           <!-- Kонец новой ссылки -->
+		    <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="11/comic.png" data-lightbox="comic" data-title="Городская геодезия"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/11/comic_lazy.png"
+			 width="140px;"
+			 title="Городская геодезия" alt="Городская геодезия" />
+	  </a>
+          <!-- Kонец новой ссылки -->
 
 
 	  <hr>
