--- a/archive.html
+++ b/archive.html
@@ -164,6 +164,15 @@
 			 title="Городская геодезия" alt="Городская геодезия" />
 	  </a>
           <!-- Kонец новой ссылки -->
+			<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="12/comic.png" data-lightbox="comic" data-title="На работу"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/12/comic_lazy.png"
+			 width="140px;"
+			 title="На работу" alt="На работу" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 
 
 	  <hr>
