--- a/archive.html
+++ b/archive.html
@@ -173,6 +173,15 @@
 			 title="На работу" alt="На работу" />
 	  </a>
             <!-- Kонец новой ссылки -->
+					<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="13/comic.png" data-lightbox="comic" data-title="Друзья"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/13/comic_lazy.png"
+			 width="140px;"
+			 title="Друзья" alt="Друзья" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 
 
 	  <hr>
