--- a/archive.html
+++ b/archive.html
@@ -182,7 +182,15 @@
 			 title="Друзья" alt="Друзья" />
 	  </a>
             <!-- Kонец новой ссылки -->
-
+			<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="14/comic.png" data-lightbox="comic" data-title="Рынок"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/14/comic_lazy.png"
+			 width="140px;"
+			 title="Рынок" alt="Рынок" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 
 	  <hr>
 
