--- a/archive.html
+++ b/archive.html
@@ -191,6 +191,15 @@
 			 title="Рынок" alt="Рынок" />
 	  </a>
             <!-- Kонец новой ссылки -->
+			<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="15/comic.png" data-lightbox="comic" data-title="The Jerk"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/15/comic_lazy.png"
+			 width="140px;"
+			 title="The Jerk" alt="The Jerk" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 
 	  <hr>
 
