--- a/archive.html
+++ b/archive.html
@@ -200,6 +200,15 @@
 			 title="The Jerk" alt="The Jerk" />
 	  </a>
             <!-- Kонец новой ссылки -->
+					<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="16/comic.png" data-lightbox="comic" data-title="В городе моем"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/16/comic_lazy.png"
+			 width="140px;"
+			 title="В городе моем" alt="В городе моем" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 
 	  <hr>
 
