--- a/archive.html
+++ b/archive.html
@@ -209,6 +209,15 @@
 			 title="В городе моем" alt="В городе моем" />
 	  </a>
             <!-- Kонец новой ссылки -->
+					<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="17/comic.png" data-lightbox="comic" data-title="Ботинки, мечтающие о чашке чая"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/17/comic_lazy.png"
+			 width="140px;"
+			 title="Ботинки, мечтающие о чашке чая" alt="Ботинки, мечтающие о чашке чая" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 
 	  <hr>
 
