--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: В городе моем</title>
+    <title>indian geogra: Ботинки, мечтающие о чашке чая</title>
     
     <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -68,13 +68,13 @@
 
 
           <div id="ComicTitle">
-	    В горде моем
+	    Ботинки, мечтающие о чашке чая
 	  </div>
 
 
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../15/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../16/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../16/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
@@ -82,20 +82,20 @@
 	  <div id="comic">
 	  <center>
 	    <a style="display: inline; color: #303030; padding: 0px 0px 0px 0px;"
-	       href="https://indiangeogra.github.io/16/comic.png">
-	    <img src="https://indiangeogra.github.io/16/comic_lazy.png"
+	       href="https://indiangeogra.github.io/17/comic.png">
+	    <img src="https://indiangeogra.github.io/17/comic_lazy.png"
 		 width="432px"
-		 data-src="https://indiangeogra.github.io/16/comic_small.png"
+		 data-src="https://indiangeogra.github.io/17/comic_small.png"
 		 class="lazyload blur-up"
-		 title="n месяцев назад" alt="В городе моем " class="lazyload no-src" />
+		 title="050316" alt="Ботинки, мечтающие о чашке чая " class="lazyload no-src" />
 	    </a>
 	  </center>
 	  </div>
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../16/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../17/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../16/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../17/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <br />
@@ -113,8 +113,8 @@
 	  <br />
 	  <center>
 	  <div style="color: #333">
-	  Сослать в наш красный уголок: http://indiangeogra.github.io/16/index.html<br />
-	  Стянуть картинку: http://indiangeogra.github.io/16/comic.png
+	  Сослать в наш красный уголок: http://indiangeogra.github.io/17/index.html<br />
+	  Стянуть картинку: http://indiangeogra.github.io/17/comic.png
 	  </div>
 	  </center>
         
