--- a/archive.html
+++ b/archive.html
@@ -218,6 +218,15 @@
 			 title="Ботинки, мечтающие о чашке чая" alt="Ботинки, мечтающие о чашке чая" />
 	  </a>
             <!-- Kонец новой ссылки -->
+		<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="18/comic.png" data-lightbox="comic" data-title="Мумий Тролль"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/18/comic_lazy.png"
+			 width="140px;"
+			 title="Мумий Тролль" alt="Мумий Тролль" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 
 	  <hr>
 
