--- a/archive.html
+++ b/archive.html
@@ -227,6 +227,15 @@
 			 title="Мумий Тролль" alt="Мумий Тролль" />
 	  </a>
             <!-- Kонец новой ссылки -->
+			<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="19/comic.png" data-lightbox="comic" data-title="Москва-река"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/19/comic_lazy.png"
+			 width="140px;"
+			 title="Москва-река" alt="Москва-река" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 
 	  <hr>
 
