--- a/archive.html
+++ b/archive.html
@@ -236,6 +236,15 @@
 			 title="Москва-река" alt="Москва-река" />
 	  </a>
             <!-- Kонец новой ссылки -->
+			<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="20/comic.png" data-lightbox="comic" data-title="Зима уходит"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/20/comic_lazy.png"
+			 width="140px;"
+			 title="Зима уходит" alt="Зима уходит" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 
 	  <hr>
 
