--- a/archive.html
+++ b/archive.html
@@ -245,6 +245,15 @@
 			 title="Зима уходит" alt="Зима уходит" />
 	  </a>
             <!-- Kонец новой ссылки -->
+	<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="21/comic.png" data-lightbox="comic" data-title="Meryl"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/21/comic_lazy.png"
+			 width="140px;"
+			 title="Meryl" alt="Meryl" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 
 	  <hr>
 
