--- a/archive.html
+++ b/archive.html
@@ -255,6 +255,16 @@
 	  </a>
             <!-- Kонец новой ссылки -->
 
+			       <!-- Kонец новой ссылки -->
+	<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="22/comic.png" data-lightbox="comic" data-title="Флейтистка"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/22/comic_lazy.png"
+			 width="140px;"
+			 title="Флейтистка" alt="Флейтистка" />
+	  </a>
+            <!-- Kонец новой ссылки -->
 	  <hr>
 
 	  <br />
