--- a/archive.html
+++ b/archive.html
@@ -265,6 +265,25 @@
 			 title="Флейтистка" alt="Флейтистка" />
 	  </a>
             <!-- Kонец новой ссылки -->
+	<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="23/comic.png" data-lightbox="comic" data-title="Китайская фантазия"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/23/comic_lazy.png"
+			 width="140px;"
+			 title="Китайская фантазия" alt="Китайская фантазия" />
+	  </a>
+            <!-- Kонец новой ссылки -->
+	  <hr>
+<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="24/comic.png" data-lightbox="comic" data-title="Размытый город"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/24/comic_lazy.png"
+			 width="140px;"
+			 title="Размытый город" alt="Размытый город" />
+	  </a>
+<!-- Kонец новой ссылки -->
 	  <hr>
 
 	  <br />
