--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <script type="text/javascript" src='http://indiangeogra.github.io/javascripts/shortcuts.js'></script>
     <script type="text/javascript">
       shortcut.add("Left",function() {
-      window.location.href = 'http://indiangeogra.github.io/21';
+      window.location.href = 'http://indiangeogra.github.io/23';
       });
       shortcut.add("Right",function() {
-      window.location.href = 'http://indiangeogra.github.io/22';
+      window.location.href = 'http://indiangeogra.github.io/24';
       });
     </script>
 
@@ -33,7 +33,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Флейтистка</title>
+    <title>indian geogra: Размытый город</title>
     
     <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -68,34 +68,34 @@
 
 
           <div id="ComicTitle">
-	    Флейтистка
+	    Размытый город
 	  </div>
 
 
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../21/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../23/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../22/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../24/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
 	  <center>
 	    <a style="display: inline; color: #303030; padding: 0px 0px 0px 0px;"
-	       href="https://indiangeogra.github.io/22/comic.png">
-	    <img src="https://indiangeogra.github.io/22/comic_lazy.png"
+	       href="https://indiangeogra.github.io/24/comic.png">
+	    <img src="https://indiangeogra.github.io/24/comic_lazy.png"
 		 width="444px"
-		 data-src="https://indiangeogra.github.io/22/comic_small.png"
+		 data-src="https://indiangeogra.github.io/24/comic_small.png"
 		 class="lazyload blur-up"
-		 title="190316" alt="Флейтистка " class="lazyload no-src" />
+		 title="1115" alt="Размытый город " class="lazyload no-src" />
 	    </a>
 	  </center>
 	  </div>
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../21/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../23/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../22/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../24/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <br />
@@ -113,8 +113,8 @@
 	  <br />
 	  <center>
 	  <div style="color: #333">
-	  Сослать в наш красный уголок: http://indiangeogra.github.io/22/index.html<br />
-	  Стянуть картинку: http://indiangeogra.github.io/22/comic.png
+	  Сослать в наш красный уголок: http://indiangeogra.github.io/24/index.html<br />
+	  Стянуть картинку: http://indiangeogra.github.io/24/comic.png
 	  </div>
 	  </center>
         
