--- a/24/index.html
+++ b/24/index.html
@@ -112,6 +112,10 @@
 
 	  <br />
 	  <center>
+	  	<!-- VK -->
+     		<a href="http://vkontakte.ru/share.php?url=http://indiangeogra.github.io" target="_blank">
+        		<img src="http://indiangeogra.github.io/vk.png" alt="VK" />
+    		</a>
 	  <div style="color: #333">
 	  Сослать в наш красный уголок: http://indiangeogra.github.io/24/index.html<br />
 	  Стянуть картинку: http://indiangeogra.github.io/24/comic.png
