--- a/24/index.html
+++ b/24/index.html
@@ -113,8 +113,8 @@
 	  <br />
 	  <center>
 	  	<!-- VK -->
-     		<a href="http://vkontakte.ru/share.php?url=http://indiangeogra.github.io" target="_blank">
-        		<img src="http://indiangeogra.github.io/vk.png" alt="VK" />
+     		<a href="http://vkontakte.ru/share.php?url=https://indiangeogra.github.io" target="_blank">
+        		<img src="https://indiangeogra.github.io/vk.png" alt="VK" />
     		</a>
 	  <div style="color: #333">
 	  Сослать в наш красный уголок: http://indiangeogra.github.io/24/index.html<br />
