--- a/24/index.html
+++ b/24/index.html
@@ -23,6 +23,18 @@
         font-size: 48px;
       }
     </style>
+    
+    <style type="text/css">
+      #share-buttons img {
+      width: 35px;
+      padding: 5px;
+      border: 0;
+      box-shadow: 0;
+      display: inline;
+    }
+ 
+	</style>
+	
     <!--<link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" type="text/css" href="https://indiangeogra.github.io/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="https://indiangeogra.github.io/stylesheets/pygment_trac.css" media="screen">
@@ -112,10 +124,13 @@
 
 	  <br />
 	  <center>
+	  	<!-- I got these buttons from simplesharebuttons.com -->
+	  <div id="share-buttons">
 	  	<!-- VK -->
      		<a href="http://vkontakte.ru/share.php?url=https://indiangeogra.github.io" target="_blank">
         		<img src="https://indiangeogra.github.io/vk.png" alt="VK" />
     		</a>
+    	  </div>
 	  <div style="color: #333">
 	  Сослать в наш красный уголок: http://indiangeogra.github.io/24/index.html<br />
 	  Стянуть картинку: http://indiangeogra.github.io/24/comic.png
