--- a/24/index.html
+++ b/24/index.html
@@ -130,6 +130,14 @@
      		<a href="http://vkontakte.ru/share.php?url=https://indiangeogra.github.io" target="_blank">
         		<img src="https://indiangeogra.github.io/vk.png" alt="VK" />
     		</a>
+    		<!-- Facebook -->
+    		<a href="http://www.facebook.com/sharer.php?u=https://indiangeogra.github.io" target="_blank">
+		 <img src="https://indiangeogra.github.io/facebook.png" alt="Facebook" />
+	        </a>
+	        <!-- Twitter -->
+		  <a href="https://twitter.com/share?url=https://indiangeogra.github.io&amp;text=indiangeogra&amp;hashtags=indiangeogra" target="_blank">
+        		<img src="https://indiangeogra.github.io/twitter.png" alt="Twitter" />
+    		</a>
     	  </div>
 	  <div style="color: #333">
 	  Сослать в наш красный уголок: http://indiangeogra.github.io/24/index.html<br />
