--- a/archive.html
+++ b/archive.html
@@ -283,6 +283,60 @@
 			 title="Размытый город" alt="Размытый город" />
 	  </a>
 <!-- Kонец новой ссылки -->
+<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="25/comic.png" data-lightbox="comic" data-title="Качели"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/25/comic_lazy.png"
+			 width="140px;"
+			 title="Качели" alt="Качели" />
+	  </a>
+<!-- Kонец новой ссылки -->
+<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="26/comic.png" data-lightbox="comic" data-title="Средиземноморье"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/26/comic_lazy.png"
+			 width="140px;"
+			 title="Средиземноморье" alt="Средиземноморье" />
+	  </a>
+<!-- Kонец новой ссылки -->
+<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="27/comic.png" data-lightbox="comic" data-title="Конец марта"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/27/comic_lazy.png"
+			 width="140px;"
+			 title="Конец марта" alt="Конец марта" />
+	  </a>
+<!-- Kонец новой ссылки -->
+<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="28/comic.png" data-lightbox="comic" data-title="Depeche Mode"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/28/comic_lazy.png"
+			 width="140px;"
+			 title="Depeche Mode" alt="Depeche Mode" />
+	  </a>
+<!-- Kонец новой ссылки -->
+<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="29/comic.png" data-lightbox="comic" data-title="До Драмтеатра"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/29/comic_lazy.png"
+			 width="140px;"
+			 title="До Драмтеатра" alt="До Драмтеатра" />
+	  </a>
+<!-- Kонец новой ссылки -->
+<!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="30/comic.png" data-lightbox="comic" data-title="Мост"
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/30/comic_lazy.png"
+			 width="140px;"
+			 title="Мост" alt="Мост" />
+	  </a>
+<!-- Kонец новой ссылки -->
 	  <hr>
 
 	  <br />
